<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#f7f7f7"
      android:orientation="vertical">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="10dp"
        android:background="#fabc42"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lg_accounts"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lg_account"
            android:textColor="#000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/lg_login_accounts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/lg_accounts"
            android:background="#00ffffff"
            android:maxLength="20"
            android:maxLines="1"
            android:text="wsydc1314520"
            android:textColor="#4f4f4f"
            android:textColorHint="#c3c3c3"
            android:textSize="14.0sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#ddd" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lg_password_hint"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lg_password"
            android:textColor="#000"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/lg_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/lg_password_hint"
            android:background="@null"
            android:text="111111"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#4f4f4f"
            android:textColorHint="#c3c3c3"
            android:textSize="14.0sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#ddd"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lg_identify_code"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lg_identify_code"
            android:textColor="#000"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/lg_click_btn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"/>

        <EditText
            android:id="@+id/lg_verify_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/lg_click_btn"
            android:layout_toRightOf="@id/lg_identify_code"
            android:background="@null"
            android:hint="@string/lg_identify_code_hint"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="#4f4f4f"
            android:textColorHint="#c3c3c3"
            android:textSize="14.0sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/lg_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/lg_forget_password"
            android:textColor="#666"
            android:textSize="14.0sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/lg_login_btn"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#000"
        android:gravity="center"
        android:text="@string/lg_login"
        android:textColor="#ffffff"
        android:textSize="16.0sp"/>

    <Button
        android:id="@+id/lg_register"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:text="@string/lg_register"
        android:textColor="#666"
        android:textSize="14.0sp"/>

</LinearLayout>